<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="facebook_application_id" translatable="false">1001282337213432</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb1001282337213432</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_authentication_canceled" />
    <string name="eating_place_none">Eating place dont selected</string>
    <string name="error_no_internet" />
    <string name="error_no_phone">Sorry no phone</string>
    <string name="error_no_website">Sorry no website</string>
    <string name="error_unknown_error" />
    <string name="toolbar_name">I\'m Hungry</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_mapview">Map View</string>
    <string name="bottom_navigation_menu_listView">List View</string>
    <string name="bottom_navigation_menu_Workmates">Workmates</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_map_fragment">Hello map fragment</string>
    <string name="hello_list_fragment">Hello list fragment</string>
    <string name="hello_workmates_fragment">Hello workmates fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="google_maps_api_key">AIzaSyBNaYHRy_wAQNg8c2zXiyJ3uLL_eFSFFTs</string>
    <string name="restaurants_name">Le Zinc</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="title_activity_restaurants_detail">RestaurantsDetailActivity</string>
    <string name="hasn_not_decided">not decided</string>
    <!--<string name="choice">%s is going to %s today !</string>-->
    <string name="someone_is_joining">%1s is joining !</string>
    <!--<string name="notification_no_choice">%s has not chosen any restaurant today.</string>-->
    <string name="no_restaurant_selected">There\'s no restaurant selected</string>
    <string name="no_body_register_yet">no body register yet</string>
    <string name="search_restaurants">search</string>
    <string name="restaurant_call">CALL</string>
    <string name="restaurant_like">LIKE</string>
    <string name="restaurant_website">WEBSITE</string>
    <string name="no_website_found">no website found</string>
    <string name="notification_subscription" translatable="false">Notification subscription</string>
    <string name="delete_account" translatable="false">Delete my account!</string>
    <string name="notification_joining">is joining !</string>
    <string name="notification_title">title</string>
    <string name="notification_message">message</string>
    <string name="notif">notif</string>
    <string name="phone_dont_set">pas de phone</string>
    <string name="warning">warning</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">cancel</string>
    <string name="notification_subscribed" translatable="false">notification souscrite</string>
    <string name="notification_unsubscribe_failed" translatable="false">echec souscription</string>
    <string name="notification_unsubscribed" translatable="false">non souscrit</string>
    <string name="ok" translatable="false">oui</string>
    <string name="cancel" translatable="false">annuler</string>
    <string name="warning_delete" translatable="false">suppression warning</string>
    <string name="notification_alone" translatable="false">alone</string>
    <string name="notification" translatable="false">get notification</string>
    <string name="default_notification_channel_id" translatable="false">channelId_default</string>
    <string name="message_from_firebase" translatable="false">Firebase messages</string>
</resources>