<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_map"
        android:title="@string/bottom_navigation_menu_mapview"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_list"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_view_list"
        android:title="@string/bottom_navigation_menu_listView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_people"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_people"
        android:title="@string/bottom_navigation_menu_Workmates"
        app:showAsAction="ifRoom" />
</menu>