<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/details_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantsDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <ImageView
            android:id="@+id/img_restaurant_details"
            android:layout_width="0dp"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/ButtonReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="4dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/restaurant_details_floating_btn"
            android:src="@drawable/ic_baseline_stars_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            app:elevation="8dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_restaurant_details"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            android:tint="@null"
            app:tint="@null"
            android:layout_marginRight="10dp" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintTop_toBottomOf="@+id/img_restaurant_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardBackgroundColor="@color/colorPrimary">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/restaurant_details_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:textColor="#FFFFFF"
                    android:layout_marginLeft="8dp" />
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/restaurant_details_rating"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/restaurant_details_name"
                    android:layout_marginTop="11dp"
                    android:layout_marginStart="8dp"
                    android:progress="50"
                    android:numStars="3"
                    android:layout_marginLeft="8dp" />
                <TextView
                    android:id="@+id/restaurant_details_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/restaurant_details_name"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/white"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


       <!--  BUTTONS -->
        <LinearLayout
            android:id="@+id/restaurant_buttonsBar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/restaurant_call_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:backgroundTint="@color/colorPrimary"
                    android:background="@drawable/ic_baseline_phone"
                    tools:ignore="OnClick" />

                <TextView
                    android:id="@+id/tv_restaurant_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:layout_gravity="center"
                    android:text="@string/restaurant_call"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/restaurant_like_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:backgroundTint="@color/colorPrimary"
                    android:background="@drawable/ic_baseline_star"
                     />

                <TextView
                    android:id="@+id/tv_restaurant_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:layout_gravity="center"
                    android:text="@string/restaurant_like"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/restaurant_website_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_baseline_language"
                    app:backgroundTint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_restaurant_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:layout_gravity="center"
                    android:text="@string/restaurant_website"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/restaurant_details_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurant_buttonsBar_layout"
            android:layout_marginTop="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
